# apps/api/internal/users/handler.go
@@ -25,8 +25,9 @@ func NewHandler(service *Service) *Handler {
 // @Accept       json
 // @Produce      json
 // @Success      200 {object} UserResponse
-// @Failure      400
-// @Failure      404
+// @Failure      400 {object} utils.ErrorResponse
+// @Failure      401 {object} utils.ErrorResponse
+// @Failure      404 {object} utils.ErrorResponse
 // @Failure      500 {object} utils.ErrorResponse
 // @Router       /register [post]
 func (h *Handler) Register(w http.ResponseWriter, r *http.Request) {
@@ -68,4 +69,46 @@ func (h *Handler) Register(w http.ResponseWriter, r *http.Request) {
 		Link:     user.Link,
 	}
 	utils.RespondWithJSON(w, http.StatusCreated, userResponse)
+}
+
+// @Tags         auth
+// @Accept       json
+// @Param        req body LoginUserParams true "Login request"
+// @Produce      json
+// @Success      200 {object} UserResponse
+// @Failure      400 {object} utils.ErrorResponse
+// @Failure      401 {object} utils.ErrorResponse
+// @Failure      404 {object} utils.ErrorResponse
+// @Failure      500 {object} utils.ErrorResponse
+// @Router       /login [post]
+func (h *Handler) Login(w http.ResponseWriter, r *http.Request) {
+	var req LoginUserParams
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		utils.RespondWithError(w, http.StatusBadRequest, "invalid_request", "Invalid request", nil)
+		return
+	}
+	user, err := h.service.Login(r.Context(), req)
+	if err != nil {
+
+		println("ojojojjojoo")
+		switch {
+		case errors.Is(err, ErrInvalidCredentials):
+			utils.RespondWithError(w, http.StatusUnauthorized, "invalid_credentials", "Invalid credentials", nil)
+		case errors.Is(err, ErrUsernameRequired):
+			utils.RespondWithError(w, http.StatusBadRequest, "username_required", "Username is required", nil)
+		case errors.Is(err, ErrPasswordRequired):
+			utils.RespondWithError(w, http.StatusBadRequest, "password_required", "Password is required", nil)
+		default:
+			utils.RespondWithError(w, http.StatusInternalServerError, "internal_server_error", err.Error(), nil)
+		}
+		return
+	}
+
+	userResponse := UserResponse{
+		ID:       user.ID,
+		Username: user.UserName,
+		Email:    user.Email,
+		Link:     user.Link,
+	}
+	utils.RespondWithJSON(w, http.StatusOK, userResponse)
 }
