# apps/api/internal/users/model.go
@@ -15,12 +15,18 @@ type UserResponse struct {
 	Link     string `json:"link"`
 }
 
+type LoginUserParams struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
 var (
-	ErrEmailExists      = errors.New("email already exists")
-	ErrUsernameExists   = errors.New("username already exists")
-	ErrLinkExists       = errors.New("link already exists")
-	ErrUserRequired     = errors.New("user required")
-	ErrInvalidEmail     = errors.New("invalid email")
-	ErrUsernameRequired = errors.New("username required")
-	ErrPasswordRequired = errors.New("password required")
+	ErrEmailExists        = errors.New("email already exists")
+	ErrUsernameExists     = errors.New("username already exists")
+	ErrLinkExists         = errors.New("link already exists")
+	ErrUserRequired       = errors.New("user required")
+	ErrInvalidEmail       = errors.New("invalid email")
+	ErrUsernameRequired   = errors.New("username required")
+	ErrPasswordRequired   = errors.New("password required")
+	ErrInvalidCredentials = errors.New("invalid credentials")
 )
