# apps/api/internal/users/service.go
@@ -38,3 +38,24 @@ func (s *Service) Register(ctx context.Context, req database.CreateUserParams) (
 
 	return data, nil
 }
+
+func (s *Service) Login(ctx context.Context, req LoginUserParams) (*database.GetUserByUsernameRow, error) {
+	if req.Username == "" {
+		return &database.GetUserByUsernameRow{}, ErrUsernameRequired
+	}
+	if req.Password == "" {
+		return &database.GetUserByUsernameRow{}, ErrPasswordRequired
+	}
+	user, err := s.repo.GetUserByUsername(ctx, req.Username)
+	if err != nil {
+		return &database.GetUserByUsernameRow{}, err
+	}
+
+	if user == nil {
+		return &database.GetUserByUsernameRow{}, ErrInvalidCredentials
+	}
+	if !utils.CheckPasswordHash(req.Password, user.Password) {
+		return &database.GetUserByUsernameRow{}, ErrInvalidCredentials
+	}
+	return user, nil
+}
